Added Internal Documentation.
Went through each page and added documentation for each site. Both includes basic documentation of what a page does and what its for. Also includes documentation for the .css files so its clear what .css is used and where its used. Also updated README.md to properly reflect what the project is and what it includes. Also set up contactme.jsx to contain the basic form layout and basic text. Will start to work on being able to capture user inputted information and save it.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- Name: Nicholas Bonneville - Student Number: 301194178 - September 24th, 2025 -->
+<!-- Name: Nicholas Bonneville - Student Number: 301194178 - September 28th, 2025 -->
+<!-- Sets up the name of the website and logo, as well as create the main.jsx page that calls everything.-->
 <html lang="en">
     <head>
       <link rel="icon" href="/src/assets/logo.ico"/>
